# Vadasz-Denes-2026

./: .gitignore  Readme.txt  dashboard.py  install.bat  main.py
.github/workflows/: release.yml
Vadasz-Denes-2026-main/: README.md
Vadasz-Denes-2026-main/src/DASHBOARD/: clearw.py  mainui.py
Vadasz-Denes-2026-main/src/GAME/: rover.py
Vadasz-Denes-2026-main/src/GUI/: MainWindow.py
Vadasz-Denes-2026-main/src/PATHFINDER/: CMakeLists.txt
Vadasz-Denes-2026-main/src/PATHFINDER/main/: bindings.cpp  pathfinder.cpp  pathfinder.hpp
log/: README.md
src/DASHBOARD/: clearw.py  fullgraphwindow.py  logexplorer.py  logread.py  mainui.py
src/GAME/: HUD.py  game.py  gamelogic.py  gamepanel.py  mainmenu.py  rover.py  simtimeentry.py
src/GUI/: GameWindow.py  MainWindow.py
src/PATHFINDER/: .gitignore  CMakeLists.txt  README.md  VIDEO_SCRIPT_HU.md
src/PATHFINDER/main/: bindings.cpp  pathfinder.cpp  pathfinder.hpp
src/libdeps/: README.md
